fix(Web-UI): Fixed missing scrollbar when viewing many download tasks on the download page

--- a/src/WebAPI/ClientApp/src/assets/scss/style.scss
+++ b/src/WebAPI/ClientApp/src/assets/scss/style.scss
@@ -44,4 +44,8 @@ Layout
   max-height: $page-height-minus-app-bar-minus-media-overview-bar;
 }
 
+.page-content-minus-download-bar {
+  max-height: $page-height-minus-app-bar-minus-download-bar;
+}
+
 
